--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
         <a href="Home.html">home</a>
     </div>
     <header class="main_header">
-        <img id="main_header_pic" src="pics/images.png">
+        <h1>―●</h1>
+        <h1>Guitar lessons</h1>
+        <p>For begginers</p>
+        <h1>●―</h1>
     </header>
 
     <section>
