--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </section>
 
     <section class="intro_p">
-        <img id="gen_pic" src="pics/gen_pic.jpg" alt="guitar_pic">
+        <img id="gen_pic" src="pics/gen_pic.jpg" alt="guitar picture">
         <p class="intro_text">
             Our courses were created by professional players from all over the globe. That is why we give an oportunity to study any style of guitar playing. <br>
         </p>
