--- a/contact-form.html
+++ b/contact-form.html
@@ -20,7 +20,7 @@
                 <input id="contact_email" type="Email" Placeholder="Email" required name="Email"/>
             </label>
             <label class="contact_message">
-                <input id="contact_message" type="textarea" Placeholder="Your message..." name="message"/>
+                <textarea id="contact_message" rows="5" cols="30" type="textarea" Placeholder="Your message..." name="message"/></textarea>
             </label>
             <label class="submit">
                 <input id="submit" type="submit" value="Submit"/>
